# Totes_Bags

./: .gitignore  Dockerfile  Gimmecode.sql  Makefile  README.md  create_layer.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_lambda.txt
.github/workflows/: totes bags.yml  totes_bags.yml
db/: connection.py  crud.py  crud_functions.py  db_crud_functions.py  ingestion.py  s3_crud_functions.py
db/json_files/: db_totes_address.json  db_totes_counterparty.json  db_totes_currency.json  db_totes_department.json  db_totes_design.json  db_totes_payment_type.json  db_totes_purchase_order.json  db_totes_sales_order.json  db_totes_staff.json  db_totes_test.json  db_totes_test2.json  db_totes_transaction.json
db/utils/: README.md  converters.py  functional.py  get_bucket_names.py  helpers.py  json.py  json_io.py  utils.py
src/: extract.py  hello_world.py
src/extract/: connection.py  crud_functions.py  db_credentials.py  extract.py  hello_world.py
src/load/: helpers.py  load.py
src/transform/: dim_date.gzip  fact_payment.gzip  fact_purchase_order.gzip  totes_star_schema.py  transform.py
terraform/: cloudwatch.tf  dynamodb.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  layers.tf  main.tf  s3.tf  terraform.tfstate.backup  vars.tf
tests/: sample_row.py  test_connection.py  test_db.py  test_extract.py  test_hello_world.py  test_ingestion.py  test_s3_crud_functions.py  test_utils.py
tests/test_extract/: test_extract.py  test_s3_crud_functions.py  test_utils.py
tests/test_load/: test_load.py  test_load_helpers.py
tests/test_transform/: test_totes_star_schema.py  test_transform.py  test_utils.py
(+44 files in other folders)
