[tool.poetry]
name = "totes-bags"
version = "0.1.0"
description = ""
authors = ["SimonH <professional.simonhossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.2.6"
pytest = "^6.2.4"
pytest-testdox = "^3.1.0"
python-dotenv = "^1.0.1"
pg8000 = "^1.31.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
