[tool.poetry]
name = "totes-bags"
version = "0.1.0"
description = ""
authors = ["SimonH <professional.simonhossain@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^3.2.6"
pytest = "^6.2.4"
pytest-testdox = "^3.1.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
pg8000 = "^1.31.2"
tabulate = "^0.9.0"
bandit = "^1.7.9"
safety = "^3.2.5"
pytest-postgresql = "^6.0.1"
boto3 = "^1.34.160"
pyarrow = "^17.0.0"
moto = "^5.0.13"
fastparquet = "^2024.5.0"
pandas = "^2.2.2"
awswrangler = "^3.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"